Fixed a bug in the tooltip on IE. Tooltip is now working on IE9, not yet on IE 6-8.

--- a/js/src/graph/graph.css
+++ b/js/src/graph/graph.css
@@ -1,9 +1,8 @@
 div.graph-frame {
   border: 1px solid lightgray;
-} 
+}
   
 div.graph-canvas {
-    position: relative;
 }
 
 div.graph-axis {
